refactor(config): clean up jump buttons and widget textures